--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "name": "eth-provider",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "description": "A Universal Ethereum Provider",
-  "browser": "dist/browser.js",
-  "main": "dist/node.js",
-  "files": [
-    "dist"
-  ],
+  "browser": "browser.js",
+  "main": "node.js",
   "scripts": {
-    "test": "standard && npm run bundle && mocha test/main.js",
-    "test:frame": "standard && npm run bundle && mocha test/frame.js",
-    "test:ipc": "standard && npm run bundle && mocha test/ipc.js",
-    "test:all": "standard && npm run bundle && mocha",
-    "bundle:browser": "parcel build ./browser.js --out-file browser.js --no-minify --target browser",
-    "bundle:node": "parcel build ./node.js --out-file node.js --no-minify --target node",
-    "bundle": "npm run bundle:node && npm run bundle:browser",
-    "watch:browser": "parcel watch ./browser.js --out-file browser.js --target browser",
-    "watch:node": "parcel watch ./node.js --out-file node.js --target node",
-    "watch": "npm run watch:node & npm run watch:browser",
+    "test": "standard && mocha test/main.js",
+    "test:frame": "standard && mocha test/frame.js",
+    "test:ipc": "standard && mocha test/ipc.js",
+    "test:all": "standard && mocha",
     "prepublishOnly": "npm run test"
   },
   "author": {
@@ -26,16 +17,15 @@
     "url": "https//frame.sh"
   },
   "license": "GPL-3.0",
-  "repository": "github:floating/frame",
+  "repository": "github:floating/eth-provider",
   "dependencies": {
     "oboe": "2.1.4",
     "uuid": "3.3.2",
     "ws": "6.0.0",
-    "xhr2-cookies": "^1.1.0"
+    "xhr2-cookies": "1.1.0"
   },
   "devDependencies": {
     "mocha": "5.2.0",
-    "parcel-bundler": "1.9.7",
     "standard": "11.0.1",
     "web3": "1.0.0-beta.35"
   }
