--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "license": "GPL-3.0",
   "repository": "github:floating/eth-provider",
   "dependencies": {
+    "ethereum-provider": "0.0.4",
     "oboe": "2.1.4",
     "uuid": "3.3.2",
-    "ws": "6.0.0",
+    "ws": "6.1.0",
     "xhr2-cookies": "1.1.0"
   },
   "devDependencies": {
     "mocha": "5.2.0",
-    "standard": "11.0.1",
-    "web3": "1.0.0-beta.35"
+    "standard": "12.0.1",
+    "web3": "1.0.0-beta.36"
   }
 }
