--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "ethereum-provider": "0.0.6",
     "oboe": "2.1.4",
     "uuid": "3.3.2",
-    "web3": "^1.0.0-beta.37",
     "ws": "6.1.0",
     "xhr2-cookies": "1.1.0"
   },
   "devDependencies": {
     "mocha": "5.2.0",
-    "standard": "12.0.1"
+    "standard": "12.0.1",
+    "web3": "^1.0.0-beta.37"
   }
 }
