--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:frame": "standard && npm install web3@1.0.0-beta.37 && mocha test/frame.js",
     "test:ipc": "standard && mocha test/ipc.js",
     "test:all": "standard && mocha",
+    "test:browser": "parcel test/browser.html --open",
     "prepublishOnly": "npm run test"
   },
   "author": {
@@ -31,7 +32,9 @@
     "xhr2-cookies": "1.1.0"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "mocha": "5.2.0",
+    "parcel-bundler": "^1.12.3",
     "standard": "12.0.1",
     "web3": "^1.0.0-beta.37"
   }
