--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "eth-provider",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A Universal Ethereum Provider",
   "browser": "browser.js",
   "main": "node.js",
   "scripts": {
-    "test": "standard && npm run test:web3:v0 && npm run test:web3:v1 && npm run test:frame && npm run test:endpoints && npm run test:eip1193",
+    "test": "standard --fix && npm run test:web3:v0 && npm run test:web3:v1 && npm run test:frame && npm run test:endpoints && npm run test:eip1193",
     "test:web3": "npm run test:web3:v0 && npm run test:web3:latest",
     "test:web3:v0": "npm install web3@0.20.7 && mocha test/web3-v0.x.js",
     "test:web3:v1": "npm install web3@1.2.8 && mocha test/web3-v1.x.js",
@@ -25,14 +25,14 @@
   "license": "GPL-3.0",
   "repository": "github:floating/eth-provider",
   "dependencies": {
-    "ethereum-provider": "0.1.1",
+    "ethereum-provider": "0.1.2",
     "oboe": "2.1.5",
-    "uuid": "8.1.0",
-    "ws": "7.3.0",
+    "uuid": "8.3.0",
+    "ws": "7.3.1",
     "xhr2-cookies": "1.1.0"
   },
   "devDependencies": {
-    "mocha": "7.2.0",
+    "mocha": "8.1.3",
     "standard": "14.3.4",
     "web3": "1.2.8"
   }
