--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "repository": "github:floating/eth-provider",
   "dependencies": {
     "ethereum-provider": "0.2.0",
+    "eventemitter3": "^4.0.7",
     "oboe": "2.1.5",
     "uuid": "8.3.1",
     "ws": "7.4.0",
