--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eth-provider",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "A Universal Ethereum Provider",
   "browser": "browser.js",
   "main": "node.js",
@@ -25,16 +25,16 @@
   "license": "GPL-3.0",
   "repository": "github:floating/eth-provider",
   "dependencies": {
-    "ethereum-provider": "0.2.0",
-    "eventemitter3": "^4.0.7",
+    "ethereum-provider": "0.2.1",
+    "events": "3.2.0",
     "oboe": "2.1.5",
     "uuid": "8.3.1",
-    "ws": "7.4.0",
+    "ws": "7.4.1",
     "xhr2-cookies": "1.1.0"
   },
   "devDependencies": {
     "mocha": "8.2.1",
     "standard": "16.0.3",
-    "web3": "^1.2.8"
+    "web3": "1.2.8"
   }
 }
