--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "eth-provider",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "A Universal Ethereum Provider",
   "browser": "browser.js",
   "main": "node.js",
   "scripts": {
-    "test": "standard --fix && npm run test:web3:v0 && npm run test:web3:v1 && npm run test:frame && npm run test:endpoints && npm run test:eip1193",
+    "test": "standard --fix && npm run test:web3:v0 && npm run test:web3:v1 && npm run test:endpoints && npm run test:eip1193 && npm run test:frame",
     "test:web3": "npm run test:web3:v0 && npm run test:web3:latest",
     "test:web3:v0": "npm install web3@0.20.7 && mocha test/web3-v0.x.js",
     "test:web3:v1": "npm install web3@1.2.8 && mocha test/web3-v1.x.js",
@@ -25,7 +25,7 @@
   "license": "GPL-3.0",
   "repository": "github:floating/eth-provider",
   "dependencies": {
-    "ethereum-provider": "0.2.1",
+    "ethereum-provider": "0.2.2",
     "events": "3.2.0",
     "oboe": "2.1.5",
     "uuid": "8.3.1",
