--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eth-provider",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "A Universal Ethereum Provider",
   "browser": "browser.js",
   "main": "node.js",
@@ -8,10 +8,10 @@
     "test": "standard --fix && npm run test:web3:v0 && npm run test:web3:v1 && npm run test:endpoints && npm run test:eip1193 && npm run test:frame",
     "test:web3": "npm run test:web3:v0 && npm run test:web3:latest",
     "test:web3:v0": "npm install web3@0.20.7 && mocha test/web3-v0.x.js",
-    "test:web3:v1": "npm install web3@1.2.8 && mocha test/web3-v1.x.js",
+    "test:web3:v1": "npm install web3@1.2.8 --save-exact && mocha test/web3-v1.x.js",
     "test:web3:latest": "npm install web3@latest && mocha test/web3-v1.x.js",
-    "test:frame": "npm install web3@1.2.8 && mocha test/frame.js",
-    "test:endpoints": "npm install web3@1.2.8 && mocha test/endpoints.js",
+    "test:frame": "npm install web3@1.2.8 --save-exact && mocha test/frame.js",
+    "test:endpoints": "npm install web3@1.2.8 --save-exact && mocha test/endpoints.js",
     "test:eip1193": "mocha test/eip1193.js",
     "test:ipc": "mocha test/ipc.js",
     "test:all": "mocha",
