--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eth-provider",
-  "version": "0.9.0",
+  "version": "0.9.3",
   "description": "A Universal Ethereum Provider",
   "browser": "browser.js",
   "main": "node.js",
@@ -25,15 +25,15 @@
   "license": "GPL-3.0",
   "repository": "github:floating/eth-provider",
   "dependencies": {
-    "ethereum-provider": "^0.4.0",
+    "ethereum-provider": "0.4.3",
     "events": "3.3.0",
     "oboe": "2.1.5",
     "uuid": "8.3.2",
-    "ws": "7.5.0",
+    "ws": "8.0.0",
     "xhr2-cookies": "1.1.0"
   },
   "devDependencies": {
-    "mocha": "9.0.1",
+    "mocha": "9.0.3",
     "standard": "16.0.3"
   }
 }
