--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   "dependencies": {
     "ethereum-provider": "0.6.0",
     "events": "3.3.0",
+    "node-fetch": "^3.2.6",
     "oboe": "2.1.5",
     "uuid": "8.3.2",
-    "ws": "8.7.0",
-    "xhr2-cookies": "1.1.0"
+    "ws": "8.7.0"
   },
   "devDependencies": {
     "mocha": "10.0.0",
